--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <div class="boton">
+        <button id="changeGrid">Cambiar tamaño de la cuadrícula</button>
+    </div>
+    
+
     <div class="container">
 
     </div>
 
-    
     <script src="script.js"></script>
 </body>
 </html>
